# python-exception-quiz

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile.build  README.md  build_all_platforms.py  build_executable.py  build_web.py  game_engine.py  main.py  pygame_web.py  pyproject.toml  quiz.py  test_pygame_bundle.py
.github/workflows/: build-executables.yml
data/: highscores.json  savegame.json
dist_universal/: README.txt
dist_universal/macos_arm64/: README.txt
dist_universal/macos_arm64/data/: levels.json
src/python_exception_quiz/: __init__.py  cli_quiz.py  game_engine.py  main.py  pygame_quiz.py  tui_quiz.py
src/python_exception_quiz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_esc_functionality.py  test_gui_autofocus.py  test_gui_fixes.py  test_gui_keyboard_integration.py  test_launcher_system.py  test_package_structure.py  test_tui.py  test_tui_fixes.py
